Fix task configuration inheritence